--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "random-friends",
   "version": "1.0.0",
-  "description": "random names of friends, don't know what to write for the first commit",
+  "description": "random names of friends i don't know what to write for the first commit",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,9 +12,17 @@
     "npm"
   ],
   "author": "“Ricardo <ricardo.moreno1@gmx.com>",
-  "license": "MIT", 
+  "license": "MIT",
   "bin": {
-    "random-friends": "./bin/global.js"
+    "random-friends": "bin/global.js"
   },
-  "preferGlobal": true
+  "preferGlobal": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ricardmoreno1/randomFriends.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ricardmoreno1/randomFriends/issues"
+  },
+  "homepage": "https://github.com/ricardmoreno1/randomFriends#readme"
 }
